bugfix/App: remove small text causing zoom on Mobile Safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,9 @@
 @import "../../node_modules/@syncfusion/ej2-react-popups/styles/tailwind.css";
 
 @import "tailwindcss";
+.e-input,
+.e-dropdownbase,
+.e-multi,
+.e-list-item {
+  font-size: 16px !important;
+}
